tests/it/wire/snapshots/it__wire__bedrock__encodes_sampling_controls-2.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "content": [
    {
      "text": "Hello.",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": null,
  "model": {
    "model": "sonnet",
    "provider": "bedrock"
  },
  "raw": {
    "output": {
      "message": {
        "content": [
          {
            "text": "Hello."
          }
        ],
        "role": "assistant"
      }
    },
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 12,
      "outputTokens": 7,
      "totalTokens": 19
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 12,
    "output": 7,
    "reasoning": 0
  },
  "warnings": [
    {
      "code": "unsupported_control",
      "message": "this provider protocol does not support request metadata"
    }
  ]
}
