tests/it/wire/snapshots/it__wire__bedrock__merges_only_the_selected_provider_options.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "body": {
    "inferenceConfig": {
      "maxTokens": 128
    },
    "max_output_tokens": 256,
    "messages": [
      {
        "content": [
          {
            "text": "Hello"
          }
        ],
        "role": "user"
      }
    ],
    "service_tier": "flex"
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "141"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse"
}
