tests/it/wire/snapshots/it__wire__bedrock__reads_usage_without_subtracting_anything.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "cache_read": 1024,
  "cache_write": 512,
  "input": 30,
  "output": 628,
  "reasoning": 0
}
