tests/it/wire/snapshots/it__wire__bedrock__refuses_a_custom_tool_before_dispatch.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider bedrock does not support custom tools",
  "provider": "bedrock",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
