tests/it/wire/snapshots/it__wire__bedrock__refuses_audio_before_dispatch.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider bedrock does not support audio content",
  "provider": "bedrock",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
